unpackaged/main/default/objects/Case/fields/Lead_Consultant__c.field-meta.xml
<CustomField>
    <fullName>Lead_Consultant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Consultant who directs the actions under a Case</description>
    <inlineHelpText>The Consultant who directs the actions under a Case</inlineHelpText>
    <label>Lead Consultant</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Service Provider (Individual)</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>