unpackaged/main/default/objects/Case/fields/Lead_Facility_Contact__c.field-meta.xml
<CustomField>
    <fullName>Lead_Facility_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Contact at a Facility who directs the actions under a Case</description>
    <inlineHelpText>The Contact at a Facility who directs the actions under a Case</inlineHelpText>
    <label>Lead Facility Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Cases (Facility Contact)</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>